--- a/argyle/package.json
+++ b/argyle/package.json
@@ -7,5 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Curtis Lassam",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "escape-html": "^1.0.1",
+    "gulp-json-editor": "^2.0.2",
+    "gulp-util": "^3.0.1",
+    "js-beautify": "^1.5.1",
+    "lodash": "^2.4.1",
+    "marked": "^0.3.2",
+    "through2": "^0.6.1"
+  }
 }
