--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "marked": "^0.3.2",
     "moment": "^2.8.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "escape-html": "^1.0.1",
+    "gulp-json-editor": "^2.0.2",
+    "lodash": "^2.4.1",
+    "marked": "^0.3.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
