--- a/package.json
+++ b/package.json
@@ -4,25 +4,21 @@
   "description": "A sample blog using argyle",
   "main": "gulpfile.js",
   "dependencies": {
+    "del": "^0.1.3",
+    "diy-handlebars-helpers": "^1.0.10",
     "escape-html": "^1.0.1",
     "gulp": "^3.8.8",
+    "gulp-compile-handlebars": "^0.3.3",
+    "gulp-ignore": "^1.2.0",
     "gulp-indent": "^1.0.0",
-    "gulp-jsoncombine": "^1.0.0",
     "gulp-json-editor": "^2.0.2",
+    "gulp-jsoncombine": "^1.0.0",
     "gulp-plumber": "^0.6.5",
     "gulp-print": "^1.1.0",
     "gulp-remove-empty-lines": "^0.0.2",
+    "gulp-rename": "^1.2.0",
     "gulp-stripbom": "^0.1.3",
-    "gulp-size": "^1.1.0",
-    "gulp-yaml": "^0.1.0",
     "gulp-yml": "^0.1.1",
-    "lodash": "^2.4.1",
-    "marked": "^0.3.2",
-    "moment": "^2.8.3"
-  },
-  "devDependencies": {
-    "escape-html": "^1.0.1",
-    "gulp-json-editor": "^2.0.2",
     "lodash": "^2.4.1",
     "marked": "^0.3.2"
   },
