--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "escape-html": "^1.0.1",
     "gulp": "^3.8.8",
     "gulp-compile-handlebars": "^0.3.3",
+    "gulp-concat": "^2.4.1",
     "gulp-ignore": "^1.2.0",
     "gulp-indent": "^1.0.0",
     "gulp-json-editor": "^2.0.2",
@@ -17,6 +18,7 @@
     "gulp-print": "^1.1.0",
     "gulp-remove-empty-lines": "^0.0.2",
     "gulp-rename": "^1.2.0",
+    "gulp-sass": "^0.7.3",
     "gulp-stripbom": "^0.1.3",
     "gulp-yml": "^0.1.1",
     "lodash": "^2.4.1",
