--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arglebargle",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Build your blog with gulp and arglebargle.",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "author": "Curtis Lassam",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "escape-html": "^1.0.1",
     "gulp-json-editor": "^2.0.2",
     "gulp-util": "^3.0.1",
@@ -16,5 +16,9 @@
     "marked": "^0.3.2",
     "moment": "^2.8.3",
     "through2": "^0.6.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/classam/arglebargle.git"
   }
 }
